--- a/latex/tex.tex
+++ b/latex/tex.tex
@@ -37,4 +37,6 @@ Voy a meter un exponente $^{200} $
 Voy a meter una fracción $ a^{\frac{8}{100}} $
 $ a^{n^{m^{p}}} $
 
+integrales $ \int_{0}^{10} \cos^2 x dx $
+
 \end{document}
