--- a/latex/tex.tex
+++ b/latex/tex.tex
@@ -38,5 +38,6 @@ Voy a meter una fracción $ a^{\frac{8}{100}} $
 $ a^{n^{m^{p}}} $
 
 integrales $ \int_{0}^{10} \cos^2 x dx $
+$ \int_{0}^{10} \frac{3x^2+x}{5x^2} x dx $
 
 \end{document}
