--- a/latex/tex.tex
+++ b/latex/tex.tex
@@ -34,10 +34,12 @@ por ultimo
 \section{Modo en línea}
 
 Voy a meter un exponente $^{200} $
+
 Voy a meter una fracción $ a^{\frac{8}{100}} $
 $ a^{n^{m^{p}}} $
 
 integrales $ \int_{0}^{10} \cos^2 x dx $
-$ \int_{0}^{10} \frac{3x^2+x}{5x^2} x dx $
+
+Una línea $ \int_{0}^{10} \frac{3x^2+x}{5x^2} x dx $ de integrales
 
 \end{document}
