--- a/latex/tex.tex
+++ b/latex/tex.tex
@@ -42,4 +42,39 @@ integrales $ \int_{0}^{10} \cos^2 x dx $
 
 Una línea $ \int_{0}^{10} \frac{3x^2+x}{5x^2} x dx $ de integrales
 
+Expresion matemática en linea aparte:
+$$ \int_{0}^{10} \frac{3x^2+x}{5x^2} x dx $$
+
+Expresion matemática más grande
+$$ \int_{0}^{10} \frac{\frac{3x^2+x}{5x^2} x dx}{\frac{7x^3+x^2}{9x^2+6}} $$
+
+una llave en horizontal
+$$ \underbrace
+		{
+		\int_{0}^{10}
+			\frac{3x^2+x}{5x^2}dx
+		}
+		_{x^2}
+$$
+
+$$\underbrace{ 
+	\int_{0}^{10} 
+		\frac{3x^2+x}{5x^2} dx 
+	+ \int_{0}^{10} 
+		\frac{3x^2}{5x^2}
+	}_{x^4}
+$$
+
+$$\underbrace{ 
+	\overbrace{
+		\int_{0}^{10} 
+			\frac{3x^2+x}{5x^2} dx
+			}
+			+
+	\overbrace{ 
+		 \int_{0}^{10} 
+			\frac{3x^2}{5x^2}
+			}
+		}_{x^4}
+$$
 \end{document}
