--- a/latex/tex.tex
+++ b/latex/tex.tex
@@ -77,4 +77,24 @@ $$\underbrace{
 			}
 		}_{x^4}
 $$
+
+\chapter{Tablas}
+
+Una tabla de ejemplo:\\
+
+\begin{tabular}{|c|l|c|c|}
+  \hline Antonio & Ruiz  & 8.6 & 4.9 \\ 
+   Eva     & López & 4.6 & 7.3 \\
+   Ana     & Sanz  & 7.5 & 6.8 \\
+\end{tabular}
+
+\begin{tabular}{|c|c|c|c|c|}
+   \hline lunes & martes & miercoles & jueves & viernes \\
+   \hline 3.5   & 7.4    & 5.5       & 0.1    & 4.4     \\
+   \hline 8.5   & 4.4    &           & 7.7    & 4.1     \\
+   \hline 9.4   & 1.1    & 3.4       &        & 8.9     \\
+   \hline
+
+\end{tabular}
+
 \end{document}
